--- a/index.html
+++ b/index.html
@@ -57,9 +57,39 @@
                             checked="">Definitely</label>
                     <label>
                         <input name="user-recommend" value="maybe" type="radio" class="input-radio">Maybe</label>
+                    <label>
+                        <input name="user-recommend" value="not-sure" type="radio" class="input-radio">Not
+                        sure
+                    </label>
+                </div>
+                <div class="form-group">
+                    <p>What would you like to see improved? (Check all that apply)</p>
+                    <label for="">
+                        <input name="prefer" type="checkbox" value="Front-end-Projects">
+                        Front-end Projects
+                    </label>
+                    <label for="">
+                        <input name="prefer" type="checkbox" value="Back-end-Projects">
+                        Back-end Projects
+                    </label>
+                    <label for="">
+                        <input name="prefer" type="checkbox" value="fullstack-end-Projects">
+                        FullStack Projects
+                    </label>
 
-                    <label><input name="user-recommend" value="not-sure" type="radio" class="input-radio">Not
-                        sure</label>
+                    <label for="">
+                        <input name="prefer" type="checkbox" value="Front-end-Projects">
+                        Challenge
+                    </label>
+                </div>
+
+                <div class="form-group">
+                    <p>Any comments or suggestions?</p>
+                    <textarea id="comments" class="input-textarea" name="comment"
+                        placeholder="Enter your comment here..."></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" id="submit"> Submit</button>
                 </div>
 
             </form>
