--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
 <body>
     <div id="container">
+       <div class="header">
         <h1 id="title">
-            freeCodeCamp Survey Form
+            FreeCodeCamp Survey Form
         </h1>
         <p id="description">
             This Survey form in created only using HTML and CSS
         </p>
+       </div>
         <div class="form-container">
             <form action="" id='survey-form'>
 
